feat: Dodano integracje z modelem gemini w celu weryfikacji poprawnosci analizowanych tresci

--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -27,8 +27,8 @@
             <div class="items-center w-175 max-lg:w-[75%] max-md:w-[90%] max-sm:w-[90%] box shadow-sm rounded-lg border border-gray-200 p-3">
                 <textarea id="inputText" class=" mt-[2.5%] ml-[2.5%] mr-[3%] w-[95%] h-40 p-4 text-black  bg-gray-100  border border-gray-200  rounded-xl text-sm resize-none focus:outline-none focus:ring-2 focus:ring-gray-400" placeholder="Wprowadź link lub tekst do analizy..."></textarea>
                 <div class="flex flex-row justify-center mt-4 gap-[3%] mb-4 ml-2 mr-4">
-                    <button onclick="analyzeInput()" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
-                    <button onclick="analyzeInput()" class=" px-30 max-lg:px-20 max-sm:px-15 py-2   text-sm font-semibold text-violet-100 bg-gray-400 rounded-lg   transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-sword-line max-sm:hidden"></i> Battle</button>
+                    <button id="analizujBtn" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
+                    <button class=" px-30 max-lg:px-20 max-sm:px-15 py-2   text-sm font-semibold text-violet-100 bg-gray-400 rounded-lg   transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-sword-line max-sm:hidden"></i> Battle</button>
                 </div>
             </div>
 
@@ -52,6 +52,6 @@
     </div>
 </footer>
 
-
+<script src="../js/main.js"></script>
 </body>
 </html>
