--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -30,6 +30,7 @@
                     <button id="analizujBtn" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
                     <button class=" px-30 max-lg:px-20 max-sm:px-15 py-2   text-sm font-semibold text-violet-100 bg-gray-400 rounded-lg   transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-sword-line max-sm:hidden"></i> Battle</button>
                 </div>
+                <button id="analizujBtn" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
             </div>
 
         </div>
