--- a/src/public/views/register.html
+++ b/src/public/views/register.html
@@ -21,6 +21,10 @@
         import * as noblecurves from 'https://cdn.jsdelivr.net/npm/@noble/curves@2.0.1/+esm';
         window.noblecurves = noblecurves;
     </script>
+    <script>
+        import * as nobleciphers from 'https://cdn.jsdelivr.net/npm/@noble/ciphers@2.0.1/+esm';
+        window.nobleciphers = nobleciphers;
+    </script>
 </head>
 <body class="bg-white">
 <nav class="fixed w-full top-0 z-10 text-amber-50 navbar ">
