--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -7,9 +7,23 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+          integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+          referrerpolicy="no-referrer" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+          integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+          referrerpolicy="no-referrer" rel="stylesheet"/>
     <link href="../css/styles.css" rel="stylesheet">
+    <script type="module" src="../js/login.js"></script>
+    <script type="module">
+        import * as noblecurves from 'https://cdn.jsdelivr.net/npm/@noble/curves@2.0.1/+esm';
+        window.noblecurves = noblecurves;
+    </script>
+    <script>
+        import * as nobleciphers from 'https://cdn.jsdelivr.net/npm/@noble/ciphers@2.0.1/+esm';
+        window.nobleciphers = nobleciphers;
+    </script>
 </head>
 <body class="bg-white">
 <nav class="fixed w-full top-0 z-10 text-amber-50 navbar ">
@@ -18,22 +32,39 @@
     </div>
 </nav>
 <main class="mt-32">
-    <section class="max-w-4xl mx-auto">
-        <h1 class=" mt-10 text-5xl text-center max-md:text-4xl max-sm:text-3xl  font-bold mb-4 text-[#3a372e] ">Zweryfikuj Informację</h1>
-        <p  class="mt-10 text-xl max-md:text-lg max-sm:text-xs text-black opacity-40 text-center">Masz podejrzenie ze to <b>fake news</b>? Wprowadz link lub tekst do analizy</p>
-    </section>
     <section>
-        <div class="flex justify-center mt-20 ">
-            <div class="items-center w-175 max-lg:w-[75%] max-md:w-[90%] max-sm:w-[90%] box shadow-sm rounded-lg border border-gray-200 p-3">
-                <textarea id="inputText" class=" mt-[2.5%] ml-[2.5%] mr-[3%] w-[95%] h-40 p-4 text-black  bg-gray-100  border border-gray-200  rounded-xl text-sm resize-none focus:outline-none focus:ring-2 focus:ring-gray-400" placeholder="Wprowadź link lub tekst do analizy..."></textarea>
-                <div class="flex flex-row justify-center mt-4 gap-[3%] mb-4 ml-2 mr-4">
-                    <button id="analizujBtn" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
-                    <button class=" px-30 max-lg:px-20 max-sm:px-15 py-2   text-sm font-semibold text-violet-100 bg-gray-400 rounded-lg   transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-sword-line max-sm:hidden"></i> Battle</button>
+        <div class="flex flex-col items-center justify-center mt-[10%]">
+            <div class="items-center font-['Segoe UI', Tahoma, Geneva, Verdana, sans-serif'] font-medium flex-row w-100 max-lg:w-[75%] max-md:w-[90%] max-sm:w-[90%] box shadow-sm rounded-lg border border-gray-200 p-3">
+                <h1 class=" mt-[10%] text-center text-[#3a372e] font-bold text-2xl"> Zaloguj sie</h1>
+                <p class=" mt-2 text-center text-black opacity-60">Aby skorzystac z trybu walki</p>
+                <div class="relative w-full p-3">
+                    <label for="emailInput"></label><input
+                        class=" mt-[2.5%] ml-[2.5%] mr-[3%] w-[95%] h-9 p-3 pl-12 text-black  bg-gray-100  border border-gray-200  rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-gray-400"
+                        id="emailInput" placeholder="Email"
+                        type="text"/>
+                    <i class="fa-solid fa-envelope input-icon absolute pl-7 pb-2  top-1/2  mt-2 -translate-y-1/2 text-gray-400"></i>
                 </div>
-                <button id="analizujBtn" class=" px-30 max-lg:px-20 max-sm:px-15  py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg  transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)] "> <i class=" text-[18px] ri-search-2-line max-sm:hidden"></i> Analizuj</button>
+                <div class="relative w-full p-3">
+                    <label for="passwordInput"></label><input
+                        class="ml-[2.5%] mr-[3%] w-[95%] h-9 p-3 pl-12 text-black  bg-gray-100  border border-gray-200  rounded-md text-sm focus:outline-none focus:ring-2 focus:ring-gray-400"
+                        id="passwordInput" placeholder="********" type="password"/>
+                    <i class="fa-solid fa-lock input-icon absolute pl-7 pb-2  mt-1 top-1/2  -translate-y-1/2 text-gray-400"></i>
+                    <div class="flex flex-col items-baseline-last  ">
+                        <button class="absolute  mt-5 mr-[5%] top-1/6 -translate-y-1/2 text-gray-400 hover:text-violet-400 focus:outline-none"
+                                id="togglePassword" onclick="showPass()">
+                            <i class="fa-solid fa-eye" id="eye"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="w-full flex justify-center p-3">
+                    <button class="mx-auto px-10 py-2 text-sm font-semibold text-violet-100 bg-gray-500 rounded-lg transition-all duration-200 ease-in-out transform hover:-translate-y-1 hover:shadow-[0_10px_12px_rgba(0,0,0,0.3)] active:translate-y-0 active:border-b-2 active:shadow-[0_4px_8px_rgba(0,0,0,0.2)]"
+                            id="loginBtn">
+                        Zaloguj sie
+                    </button>
+                </div>
             </div>
-
         </div>
+
 
     </section>
 </main>
@@ -41,18 +72,18 @@
     <div class="container mx-auto px-4">
         <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="mb-6 mt-6 md:mb-0">
-                <a href="#" class="text-3xl font-['Pacifico'] text-white">GlueNews</a>
-                <p class="mt-5 max-sm:text-sm opacity-80">Twoje narzędzie do weryfikacji informacji w erze dezinformacji. <br> Razem budujemy bardziej świadome społeczeństwo.</p>
+                <a class="text-3xl font-['Pacifico'] text-white" href="#">GlueNews</a>
+                <p class="mt-5 max-sm:text-sm opacity-80">Twoje narzędzie do weryfikacji informacji w erze
+                    dezinformacji. <br> Razem budujemy bardziej świadome społeczeństwo.</p>
             </div>
         </div>
         <div class="border-t border-white/20 mt-6 p-6 text-center">
             <p class="opacity-80">Stworzono z <i class=" text-red-600 ri-heart-fill"></i> przez Glueeed.</p>
-            <p class="opacity-80">Projekt open-source dostępny na <a href="https://github.com/Glueeeeed/GlueNews"><i class="ri-github-fill"></i> GitHub</a></p>
+            <p class="opacity-80">Projekt open-source dostępny na <a href="https://github.com/Glueeeeed/GlueNews"><i
+                    class="ri-github-fill"></i> GitHub</a></p>
             <p class="text-sm mt-3 opacity-60">Version 1.0.0</p>
         </div>
     </div>
 </footer>
-
-<script src="../js/main.js"></script>
 </body>
 </html>
