--- a/src/public/views/battle.ejs
+++ b/src/public/views/battle.ejs
@@ -34,12 +34,11 @@
         <div class="  items-center flex flex-col justify-center mt-50 ">
             <div class=" flex flex-col items-center w-[75%] max-lg:w-[75%] max-md:w-[90%] max-sm:w-[90%] bg-white box shadow-sm rounded-lg border border-gray-200 p-3 gap-5">
                 <div class="flex flex-row gap-5 w-[100%] justify-center">
-                    <div class=" bg-gray-200 w-[90%] box shadow-sm rounded-lg border border-gray-300 p-3">
-                        <p>Czy petla for each jest nieskonczona</p>
+                    <div class=" bg-gray-200 w-[100%] box shadow-sm rounded-lg border border-gray-300 p-3">
+                        <p><%=sessionData.input%></p>
                     </div>
-                    <div class="w-[10%]">
-                        <!--                        <div class="bg-green-50 text-green-950 px-5 py-3 rounded-lg font-medium border border-gray-300"><i class="fa-solid fa-shield"></i> Obrońca</div>-->
-                        <!--                        <div class="bg-red-50 text-red-800 px-5 py-3 rounded-lg font-medium border border-gray-300"><i class="fa-solid fa-bolt-lightning"></i> Obalator </div>-->
+                    <div class="bg-blue-200 w-[20%] box shadow-sm rounded-lg border border-gray-300 p-3">
+                        <p id="timer"></p>
                     </div>
                 </div>
                 <div class="border border-gray-200 bg-gray-100 w-[100%] rounded-lg p-3 gap-5 ">
@@ -76,7 +75,7 @@
                 <p class="bg-amber-50 border border-amber-200 rounded-lg p-4 text-amber-900 font-medium">Uwaga:
                     musisz grać zgodnie z wylosowaną rolą – nawet jeśli prywatnie myślisz inaczej!</p>
 
-                <div hidden id="inviteLinkSection" class="mt-10">
+                <div  id="inviteLinkSection" class="mt-10">
                     <p class="mb-4">Udostępnij poniższy link drugiemu graczowi, aby dołączył do pokoju:</p>
                     <input id="inviteLink" type="text" readonly
                            class="w-full md:w-auto px-4 py-2 border border-gray-300 rounded-lg text-center focus:outline-none focus:ring-2 focus:ring-gray-400"
@@ -87,10 +86,10 @@
                     </button>
                 </div>
 
-                <button class="mt-4 w-full md:w-auto mx-auto px-12 py-4 bg-[#3a372e] hover:bg-[#2c2a22] text-white font-bold text-xl rounded-xl transition-all duration-200 shadow-md hover:shadow-xl disabled:opacity-50 disabled:cursor-not-allowed"
+                <button id="readyBtn" class="mt-4 w-full md:w-auto mx-auto px-12 py-4 bg-[#3a372e] hover:bg-[#2c2a22] text-white font-bold text-xl rounded-xl transition-all duration-200 shadow-md hover:shadow-xl disabled:opacity-50 disabled:cursor-not-allowed"
                         disabled>Gotowy!
                 </button>
-                <p class="text-xs text-gray-500 mt-4">
+                <p id="checkToMemberP" class="text-xs text-gray-500 mt-4">
                     Przycisk aktywuje się, gdy drugi gracz dołączy
                 </p>
             </div>
@@ -98,7 +97,7 @@
     </section>
 
 
-    <section id="choosedRoleSection" hidden  id="roleRevealSection" class="flex items-center justify-center">
+    <section id="choosedRoleSection" hidden class="flex items-center justify-center">
         <div class="mt-20 w-full max-w-2xl bg-white rounded-2xl shadow-lg border border-gray-200 p-8 md:p-12">
 
             <h1 class="text-3xl md:text-4xl font-bold text-center text-[#3a372e] mb-8">
@@ -110,7 +109,7 @@
                                 class="fa-solid fa-shield"></i> Obrońca – bronisz tezy
                     </div>
                 </div>
-                <div id="roleObalator">
+                <div id="roleObalator" hidden>
                     <div class="bg-red-50 text-red-800 px-5 py-3 rounded-lg font-medium"><i
                                 class="fa-solid fa-bolt-lightning"></i> Obalator – próbujesz obalić teze
                     </div>
@@ -118,12 +117,39 @@
                 <p class="bg-amber-50 border border-amber-200 rounded-lg p-4 text-amber-900 font-medium">Uwaga:
                     musisz grać zgodnie z wylosowaną rolą – nawet jeśli prywatnie myślisz inaczej!</p>
                 <div class="mt-10">
-                    <button onclick="startDebate()"
+                    <button id="understandBtn"
                             class="w-full md:w-auto mx-auto px-12 py-4 bg-[#3a372e] hover:bg-[#2c2a22] text-white font-bold text-xl rounded-xl transition-all duration-200 shadow-md hover:shadow-xl">
                         Rozumiem
                     </button>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section hidden id="votingSection"   class="flex items-center justify-center">
+        <div class="mt-20 w-full max-w-2xl bg-white rounded-2xl shadow-lg border border-gray-200 p-8 md:p-12">
+
+            <h1 class="text-3xl md:text-4xl font-bold text-center text-[#3a372e] mb-8">
+                Kto przekonał Cię bardziej?
+            </h1>
+            <div class="space-y-6 text-gray-800 text-lg leading-relaxed text-center">
+                <div id="roleA">
+                    <div class="bg-green-50 text-green-950 px-5 py-3 rounded-lg font-medium">A</div>
+                </div>
+                <div id="roleB">
+                    <div class="bg-red-50 text-red-800 px-5 py-3 rounded-lg font-medium">B</div>
+                </div>
+            </div>
+            <div class="flex justify-center mt-6 space-x-8">
+                <button id="voteABtn" class="px-6 py-3 bg-green-500 hover:bg-green-600 text-white font-semibold rounded-lg shadow-md hover:shadow-lg transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed"
+                        disabled>Głosuj na A
+                </button>
+                <button id="voteBBtn" class="px-6 py-3 bg-red-500 hover:bg-red-600 text-white font-semibold rounded-lg shadow-md hover:shadow-lg transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed"
+                        disabled>Głosuj na B
+                </button>
+
+            </div>
+            <p hidden id="forPlayersInfo" class=" text-center text-sm text-gray-500 mt-5">Tylko widownia moze glosowac</p>
         </div>
     </section>
 
