--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -23,7 +23,7 @@
 <main class="mt-32">
     <section class="max-w-4xl mx-auto">
         <h1 class=" mt-10 text-5xl text-center max-md:text-4xl max-sm:text-3xl  font-bold mb-4 text-[#3a372e] ">Zweryfikuj Informację</h1>
-        <p  class="mt-10 text-xl max-md:text-lg max-sm:text-xs text-black opacity-40 text-center">Masz podejrzenie ze to <b>fake news</b>? Wprowadz link lub tekst do analizy</p>
+        <p  class="mt-10 text-xl max-md:text-lg max-sm:text-xs text-black opacity-40 text-center">Masz podejrzenie że to <b>fake news</b>? Wprowadź link lub tekst do analizy</p>
     </section>
     <section>
         <div class="flex justify-center mt-20 ">
@@ -41,8 +41,44 @@
         </div>
 
     </section>
+    <section class="max-w-4xl mx-auto">
+        <h1 class=" mt-30 text-4xl text-center max-md:text-4xl max-sm:text-3xl  font-bold mb-4 text-[#3a372e] ">Jak to działa?</h1>
+    </section>
+    <section class=" px-4 py-40 ">
+        <div class="grid md:w-[80%] mx-auto md:grid-cols-3 gap-20">
+            <div class=" w-full items font-color p-6 hover:scale-110 duration-200 hover:shadow-[0px_0px_48px_0px_rgba(58,55,46,1)]  border border-gray-200 rounded-lg shadow text-center">
+                <div class="w-16 h-16  bg-gray-200 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i class="fa-solid fa-magnifying-glass text-[#3a372e] text-2xl"></i>
+                </div>
+                <h3 class="text-lg font-bold mb-2 text-[#3a372e]">1. Wklej link albo treść</h3>
+                <p class="opacity-60">
+                    Wprowadź link do artykułu lub bezpośrednio wklej tekst, który chcesz zweryfikować pod kątem prawdziwości.
+                </p>
+            </div>
+            <div class=" w-full items  p-6 hover:scale-110 duration-200 hover:shadow-[0px_0px_48px_0px_rgba(58,55,46,1)] rounded-lg  border border-gray-200 shadow text-center">
+                <div class="icon w-16 h-16 bg-gray-200 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i class="fa-solid fa-brain text-[#3a372e] text-2xl"></i>
+                </div>
+                <h3 class="text-lg font-bold mb-2 text-[#3a372e] ">2. AI analizuje treść</h3>
+                <p class=" font-color opacity-60">
+                    Nasz zaawansowany model AI przetwarza wprowadzone dane, pod kątem wykrywania dezinformacji i fałszywych wiadomości.
+                </p>
+            </div>
+            <div class=" w-full items p-7  hover:scale-110 duration-200 hover:shadow-[0px_0px_48px_0px_rgba(58,55,46,1)] rounded-lg border border-gray-200  shadow text-center">
+                <div class=" w-16 h-16 bg-gray-200 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i class="fa-solid fa-circle-check  text-[#3a372e] text-2xl"></i>
+                </div>
+                <h3 class="text-lg font-bold mb-2 text-[#3a372e]">3. Otrzymujesz werdykt</h3>
+                <p class=" font-color opacity-60">
+                    Jasna ocena wiarygodności wraz z uzasadnieniem i źródłami.
+                </p>
+            </div>
+
+
+        </div>
+    </section>
 </main>
-<footer class="navbar text-white py-8 mt-120">
+<footer class="navbar text-white py-8 mt-1">
     <div class="container mx-auto px-4">
         <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="mb-6 mt-6 md:mb-0">
