fix: Naprawiono wyswietlanie hasla oraz kopiowanie linku do walki

--- a/src/public/views/login.html
+++ b/src/public/views/login.html
@@ -51,7 +51,7 @@
                     <i class="fa-solid fa-lock input-icon absolute pl-7 pb-2  mt-1 top-1/2  -translate-y-1/2 text-gray-400"></i>
                     <div class="flex flex-col items-baseline-last  ">
                         <button class="absolute  mt-5 mr-[5%] top-1/6 -translate-y-1/2 text-gray-400 hover:text-green-950 focus:outline-none"
-                                id="togglePassword" onclick="showPassword()">
+                                id="togglePassword">
                             <i class="fa-solid fa-eye" id="eye"></i>
                         </button>
                     </div>
