fix: Uniemozliwiono dołączenie widzów podczas głosowania

--- a/src/public/views/battle.ejs
+++ b/src/public/views/battle.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
           integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link href="http://localhost:2137/css/styles.css" rel="stylesheet">
+    <link href="http://localhost:2137/css/styles.css" rel="stylesheet"> // CHANGE TO YOUR DOMAIN
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
           integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
@@ -173,7 +173,7 @@
     </div>
 </footer>
 
-<script src="http://localhost:2137/js/battle-chat.js"></script>
-<script src="http://localhost:2137/js/battle-room.js"></script>
+<script src="http://localhost:2137/js/battle-chat.js"></script> // CHANGE TO YOUR DOMAIN
+<script src="http://localhost:2137/js/battle-room.js"></script> // CHANGE TO YOUR DOMAIN
 </body>
 </html>
