--- a/src/public/views/results.ejs
+++ b/src/public/views/results.ejs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="http://localhost:2137/css/styles.css" rel="stylesheet">
+    <link href="http://localhost:2137/css/styles.css" rel="stylesheet"> // CHANGE TO YOUR DOMAIN
 </head>
 <body class="bg-white">
 <nav class="fixed w-full top-0 z-10 text-amber-50 navbar ">
@@ -67,6 +67,6 @@
         </div>
     </div>
 </footer>
-<script src="http://localhost:2137/js/results.js"></script>
+<script src="http://localhost:2137/js/results.js"></script> // CHANGE TO YOUR DOMAIN
 </body>
 </html>
