feat: Dodano przekierowywanie po zalogowaniu

--- a/src/public/views/battle.ejs
+++ b/src/public/views/battle.ejs
@@ -149,6 +149,7 @@
                 </button>
 
             </div>
+            <p class=" text-center text-sm text-gray-500 mt-5"> Głosowanie trwa 30 sekund..</p>
             <p hidden id="forPlayersInfo" class=" text-center text-sm text-gray-500 mt-5">Tylko widownia moze glosowac</p>
         </div>
     </section>
