--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -73,8 +73,10 @@
                     Jasna ocena wiarygodności wraz z uzasadnieniem i źródłami.
                 </p>
             </div>
-
-
+        </div>
+        <div id="attention" class="w-[80%] mx-auto mt-40">
+            <h2 class="text-2xl font-bold text-center  text-black opacity-70">Uwaga!</h2>
+            <p class="mt-4 p-4 bg-yellow-100 border border-yellow-300 rounded-lg text-black opacity-80">Nasz system weryfikacji informacji opiera się na modelu AI, który choć są potężny, może czasami popełniać błędy lub podawać nieprawidłowe źródła. Zalecamy korzystanie z GlueNews jako narzędzia wspomagającego, a nie jedynego źródła prawdy. Zawsze warto samodzielnie sprawdzić informacje z różnych źródeł.</p>
         </div>
     </section>
 </main>
