--- a/src/public/views/battleResults.ejs
+++ b/src/public/views/battleResults.ejs
@@ -41,6 +41,9 @@
                 <button onclick="redirect('/')" class="max-lg:px-6 px-3 py-3  bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:shadow-lg transition-all duration-200">
                     Powrot do GlueNews
                 </button>
+                <button onclick="redirect('/battle/leaderboard')" class="max-lg:px-6 px-3 py-3  bg-blue-700 hover:bg-blue-800 text-white font-semibold rounded-lg shadow-md hover:shadow-lg transition-all duration-200">
+                    Zobacz Tabele Liderów
+                </button>
             </div>
         </div>
 
